--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,9 @@ html {
       density: -1,
     )
   );
+  .tonal{
+    background-color: var(--mat-sys-primary);
+  }
 }
 
 body {
@@ -38,6 +41,8 @@ body {
     )
   );
 }
+
+
 
 mat-form-field {
   width: 100%;
