--- a/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
+++ b/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
@@ -96,7 +96,7 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell p-2" colspan="6">Sin resultados</td>
+      <td class="mat-cell p-3" colspan="6">SIN RESULTADOS.</td>
     </tr>
   </table>
   @if (datasize() > limit()){
