--- a/src/app/communications/presentation/pages/inbox-detail/inbox-detail.component.html
+++ b/src/app/communications/presentation/pages/inbox-detail/inbox-detail.component.html
@@ -1,48 +1,54 @@
-<mat-toolbar>
-  <button mat-icon-button backButton>
-    <mat-icon>arrow_back</mat-icon>
-  </button>
-  <span class="ml-4">Detalle</span>
-  <span class="flex-1"></span>
-  @if (communication()?.status==='pending') {
-  <button mat-icon-button matTooltip="Aceptar" (click)="accept()">
-    <mat-icon>done</mat-icon>
-  </button>
-  <button mat-icon-button matTooltip="Rechazar">
-    <mat-icon>block</mat-icon>
-  </button>
-  } @else { }
-</mat-toolbar>
+<!-- inbox-detail.component.html -->
+<div class="flex flex-col h-full">
+  <mat-toolbar color="primary" class="sticky top-0 z-20">
+    <button mat-icon-button backButton>
+      <mat-icon>arrow_back</mat-icon>
+    </button>
+    <span class="ml-4">Detalle</span>
+    <span class="flex-1"></span>
 
-<div class="px-6 mb-4">
-  @if (communication()) {
-  <inbox-card [data]="communication()!" />
-  }
-  <div class="border border-slate-300 rounded-xl mt-2">
-    @if(!isLoading()){
-    <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
-      <mat-tab label="Descripcion">
-        @switch (communication()?.procedure?.group) { @case
-        ("ExternalProcedure") {
-        <external-communication [procedure]="external!" />
-        } @case ("InternalProcedure") {
-        <internal-communication [procedure]="internal" />
-        } @case ("ProcurementProcedure") {
-        <procurement-communication
-          [procedure]="procedure()"
-          [isReceived]="communication()?.status === 'received'"
-        />
-        } @default {
-        <p>Type Procedure is not define</p>
-        } }
-      </mat-tab>
-      <mat-tab label="Flujo de trabajo">
-        <workflow-list [workflow]="workflow()" />
-      </mat-tab>
-      <mat-tab label="Flujo de trabajo grafico">
-        <workflow-graph [workflow]="workflow()" />
-      </mat-tab>
-    </mat-tab-group>
+    @if (communication()?.status === 'pending') {
+    <button mat-icon-button matTooltip="Aceptar" (click)="accept()">
+      <mat-icon>done</mat-icon>
+    </button>
+    <button mat-icon-button matTooltip="Rechazar">
+      <mat-icon>block</mat-icon>
+    </button>
     }
+  </mat-toolbar>
+
+  <!-- Contenido con scroll -->
+  <div class="flex-1 overflow-y-auto px-4 py-4 space-y-4">
+    @if (communication()) {
+    <inbox-card [data]="communication()!" />
+    }
+
+    <div class="border border-slate-300 rounded-xl">
+      @if (!isLoading()) {
+      <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
+        <mat-tab label="Descripcion">
+          @switch (communication()?.procedure?.group) { @case
+          ("ExternalProcedure") {
+          <external-communication [procedure]="external!" />
+          } @case ("InternalProcedure") {
+          <internal-communication [procedure]="internal" />
+          } @case ("ProcurementProcedure") {
+          <procurement-communication
+            [procedure]="procedure()"
+            [isReceived]="communication()?.status === 'received'"
+          />
+          } @default {
+          <p>Type Procedure is not define</p>
+          } }
+        </mat-tab>
+        <mat-tab label="Flujo de trabajo">
+          <workflow-list [workflow]="workflow()" />
+        </mat-tab>
+        <mat-tab label="Flujo de trabajo grafico">
+          <workflow-graph [workflow]="workflow()" />
+        </mat-tab>
+      </mat-tab-group>
+      }
+    </div>
   </div>
 </div>
