--- a/src/app/communications/presentation/pages/inbox-detail/inbox-detail.component.html
+++ b/src/app/communications/presentation/pages/inbox-detail/inbox-detail.component.html
@@ -1,6 +1,6 @@
 <!-- inbox-detail.component.html -->
 <div class="flex flex-col h-full">
-  <mat-toolbar color="primary" class="sticky top-0 z-20">
+  <mat-toolbar color="primary" class="sticky top-0 z-20" style="background-color: rebeccapurple;">
     <button mat-icon-button backButton>
       <mat-icon>arrow_back</mat-icon>
     </button>
