--- a/src/app/layout/presentation/pages/settings/settings.component.html
+++ b/src/app/layout/presentation/pages/settings/settings.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar>
-  <span>Configuraciones</span>
+  <button mat-icon-button backButton>
+    <mat-icon>arrow_back</mat-icon>
+  </button>
+  <span class="ml-4">Configuraciones</span>
 </mat-toolbar>
 <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start" dynamicHeight>
   <mat-tab label="Usuario">
