--- a/src/app/communications/presentation/pages/archives/archives.component.html
+++ b/src/app/communications/presentation/pages/archives/archives.component.html
@@ -6,18 +6,7 @@
   <span class="flex-1"></span>
 </mat-toolbar>
 
-<div class="px-2 sm:px-4">
-  <!-- <div class="flex flex-col sm:flex-row items-center justify-between py-2 px-3">
-    <div class="text-lg font-medium">{{ folderName() }}</div>
-    <div class="w-full sm:w-1/4 h-11">
-      <search-input
-        [initValue]="term()"
-        (onSearch)="search($event)"
-        placeholder="Alterno / Referencia"
-      />
-    </div>
-  </div> -->
-
+<div class="p-2 sm:p-4">
   <div class="flex justify-end mb-2">
     <div class="w-full sm:w-1/4 h-[54px]">
       <search-input
@@ -43,7 +32,7 @@
             }
             <div>
               {{ item.groupLabel }}
-            </div>
+            </div> 
           </div>
         </td>
       </ng-container>
