--- a/src/app/communications/presentation/pages/outbox/outbox.component.html
+++ b/src/app/communications/presentation/pages/outbox/outbox.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <span>Bandeja de salida</span>
   <span class="flex-1"></span>
-  @if (isButtonEnabledForStatus('pending')) {
+  @if (canDoAction) {
   <button
     mat-icon-button
     aria-label="Cancel"
